@@ -424,6 +424,10 @@ public interface MaskingLibrary extends CMLibrary
 		_SEASON("-SEASONS"),
 		SEASON("+SEASONS"),
 		_WEEK("-WEEKS"),
+		_DAY,
+		DAY,
+		_DAYOFYEAR,
+		DAYOFYEAR,
 		WEEK("+WEEKS"),
 		_WEEKOFYEAR("-WEEKSOFYEAR"),
 		WEEKOFYEAR("+WEEKSOFYEAR"),
@@ -459,10 +463,6 @@ public interface MaskingLibrary extends CMLibrary
 		MAXCLASSLEVEL("+MAXCLASSLEVELS"),
 		_WEATHER,
 		WEATHER,
-		_DAY,
-		DAY,
-		_DAYOFYEAR,
-		DAYOFYEAR,
 		_SYSOP("-SYSOPS"),
 		SYSOP("+SYSOPS"),
 		_SUBOP,
